test/zaun/credential-xy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: xy-ingress
  namespace: xiaohuiyun
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: credential.service.xiaoyangedu.net
      http:
        paths:
          - path: /api/
            backend:
              serviceName: credential-api
              servicePort: 2000
          - path: /
            backend:
              serviceName: credential-web
              servicePort: 80
